--- a/sentinel-token/Move.toml
+++ b/sentinel-token/Move.toml
@@ -7,7 +7,7 @@ authors = ["Satyam Bansal <satyambnsal@gmail.com>"]
 
 [dependencies]
 
-Sui = { git = "https://github.com/MystenLabs/sui.git", rev = "framework/testnet", subdir = "crates/sui-framework/packages/sui-framework" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework/", rev = "mainnet-v1.48.4" }
 
 
 [addresses]
